--- a/login.html
+++ b/login.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My app!</title>
+	<title>Login</title>
 </head>
 <body>
-	this is my app
-	login form
+
 </body>
 </html>
